# sdlconsole

./: .gitignore  CMakeSettings.json  ChangeLog.md  CmakeLists.txt  Makefile  Makefile.am  autoclean.sh  autogen.sh  config.h.in  configure.in
example/: CMakeLists.txt  ConsoleExample.c  ConsoleExample.h  Makefile.am  split.c  split.h
include/: DT_drawtext.h  Makefile.am  SDL_console.h  internal.h  utf8.h
sdlconsole/: DT_drawtext.c  Doxyfile  Makefile  Makefile.OSX  Makefile.am  README  SDL_console.c  SDL_console.h  configure.in  makefile.VC6
sdlconsole/docs/: Doxyfile  index.html  old.html  readme
sdlconsole/docs/html/: CON__console_8h-source.html  CON__console_8h.html  DT__drawtext_8h-source.html  DT__drawtext_8h.html  annotated.html  files.html  functions.html  globals.html  index.html  structBitFont__td-members.html  structBitFont__td.html  structconsole__information__td-members.html  structconsole__information__td.html
sdlconsole/docs/latex/: CON__console_8h.tex  DT__drawtext_8h.aux  DT__drawtext_8h.tex  annotated.tex  doxygen.sty  files.tex  index.tex  refman.aux  refman.dvi  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  structBitFont__td.tex  structconsole__information__td.aux  structconsole__information__td.tex
sdlconsole/example/: ConsoleExample  ConsoleExample-static  ConsoleExample.c  ConsoleExampleGL  ConsoleExampleGL-static  Makefile  Makefile.am  split.c  split.h
sdlconsole/include/: DT_drawtext.h  SDL_console.h
sdlconsole/src/: DT_drawtext.c  SDL_console.c
src/: CMakeLists.txt  DT_drawtext.c  Makefile.am  SDL_console.c  internal.c  utf8.c
